--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
-server.port = 8080
-
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/musicschool
-spring.datasource.username=root
-spring.datasource.password=root
-
+spring.datasource.url=jdbc:postgresql://localhost/musicschool
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.jpa.generate-ddl=true
