started works with chat sys

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost/musicschool
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.generate-ddl=true
+
+upload.path = C:/Users/newli/MusicSchool/uploads
