--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.datasource.url=jdbc:postgresql://localhost/musicschool
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.generate-ddl=true
+spring.devtools.add-properties=false 
 
-upload.path = C:/Users/newli/MusicSchool/uploads
+upload.path = C:/Users/abug0122/ideaProjects/MusicSchool/uploads
